--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/action-menus.less
@@ -78,13 +78,17 @@
 // Navbar avatar ==========================================================
 
 .navbar-avatar {
-  > a > img {
-    @avatar-size: floor(ceil(@navbar-height/2)/2)*2;
-    border-radius: @thumbnail-border-radius;
-    height: @avatar-size;
-    margin-top: -@navbar-padding-vertical+@navbar-height/2-@avatar-size/2;
-    vertical-align: middle;
-    width: @avatar-size;
+  > a {
+    max-height: @navbar-height;
+    
+    > img {
+      @avatar-size: floor(ceil(@navbar-height/2)/2)*2;
+      border-radius: @thumbnail-border-radius;
+      height: @avatar-size;
+      margin-top: -@navbar-padding-vertical+@navbar-height/2-@avatar-size/2;
+      vertical-align: middle;
+      width: @avatar-size;
+    }
   }
 }
 
