--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_content.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_content.vm
@@ -1,8 +1,10 @@
 ###########################################
 ##                GLOBALS
 ###########################################
+#set ($canView = !$doc.isNew() && $xwiki.hasAccessLevel('view'))
 #set ($canCopy = $canView && $hasCreatePage)
 #set ($canDelete = !$doc.isNew() && $xwiki.hasAccessLevel('delete'))
+#set ($canShare = $canView && $xwiki.exists('XWiki.SharePage') && !$isGuest)
 ###########################################
 ##            MENU CONTENT
 ###########################################
@@ -13,8 +15,8 @@
   #if ($hasCreatePage)
     #displayCreateButton()
   #end
-  #if (!$doc.isNew())
-    #diplayOptionsMenu()
+  #diplayOptionsMenu()
+  #if ($canView)
     #exportModal()
   #end
   #if($keyboardShortcutsEnabled)
@@ -25,7 +27,7 @@
 ##        DISPLAY CREATE BUTTON
 ###########################################
 #macro(displayCreateButton)
-  <div class="dropdown">
+  <div class="dropdown" id="tmCreate">
     <a href="$doc.getURL('create')" role="button"><span class="glyphicon glyphicon-plus"></span></a>
   </div>
 #end
@@ -33,10 +35,13 @@
 ##         DISPLAY EDIT MENU
 ###########################################
 #macro(displayEditMenu)
-  <div class="dropdown">
-    <a href="$doc.getURL($doc.getDefaultEditMode(), $!languageparams)" #if ($isAdvancedUser)data-toggle="dropdown"#end id="tmEdit" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
+  <div class="dropdown" id="tmEdit">
+    #set($defaultEditURL = $doc.getURL($doc.getDefaultEditMode(), $!languageparams))
+    <a href="$defaultEditURL" #if ($isAdvancedUser)data-toggle="dropdown"#end role="button"><span class="glyphicon glyphicon-pencil"></span></a>
     #if ($isAdvancedUser)
     <ul class="dropdown-menu">
+      #submenuitem($defaultEditURL, $services.localization.render('core.menu.edit'), 'tmEditDefault', '', 'pencil')
+      #submenuseparator()
       ## Check if the WYSIWYG supports the current document's syntax and if so add a menu entry to edit the current
       ## document with the WYSIWYG editor.
       #if ($services.wysiwyg.isSyntaxSupported($tdoc.syntax.toIdString()) || $tdoc.syntax.toIdString() == 'xwiki/1.0')
@@ -80,21 +85,24 @@
         #submenuseparator()
       #end
       ## Export
-      #submenuitem('' $services.localization.render('core.menu.export') 'tmExport', '', 'download-alt', 'data-toggle="modal" data-target="#exportModal"')
-      ## Print
-      #submenuitem($doc.getURL('view', "xpage=print&amp;$!escapetool.html($request.getQueryString())") $services.localization.render('core.menu.preview') 'tmPrintPreview', '', 'print')
-      ## View source
-      #submenuitem($doc.getURL('view', "viewer=code") $services.localization.render('core.menu.view.source') 'tmViewSource', '', 'search')
-      ## Share by email
-      #set ($canShare = $canView && $xwiki.exists('XWiki.SharePage') && !$isGuest)
-      #if ($canShare)
-        #submenuitem($xwiki.getURL($doc.documentReference, 'view', 'viewer=share') $services.localization.render('core.menu.share') 'tmActionShare', '', 'envelope')
-        #userPicker_import()
-        $xwiki.jsx.use('XWiki.SharePage')
-        $xwiki.ssx.use('XWiki.SharePage')
+      #if ($canView)
+        #submenuitem('' $services.localization.render('core.menu.export') 'tmExport', '', 'download-alt', 'data-toggle="modal" data-target="#exportModal"')
+        ## Print
+        #submenuitem($doc.getURL('view', "xpage=print&amp;$!escapetool.html($request.getQueryString())") $services.localization.render('core.menu.preview') 'tmPrintPreview', '', 'print')
+        ## View source
+        #submenuitem($doc.getURL('view', "viewer=code") $services.localization.render('core.menu.view.source') 'tmViewSource', '', 'search')
+        ## Share by email      
+        #if ($canShare)
+          #submenuitem($xwiki.getURL($doc.documentReference, 'view', 'viewer=share') $services.localization.render('core.menu.share') 'tmActionShare', '', 'envelope')
+          #userPicker_import()
+          $xwiki.jsx.use('XWiki.SharePage')
+          $xwiki.ssx.use('XWiki.SharePage')
+        #end
       #end
       #if($hasEdit && !$isReadOnly && $isAdvancedUser)
-        #submenuseparator()
+        #if ($canView)
+          #submenuseparator()
+        #end
         ## Rights
         #submenuitem($doc.getURL('edit', 'editor=rights') $services.localization.render('core.menu.edit.rights') 'tmEditRights', '', 'lock')
         ## Objects
@@ -105,7 +113,7 @@
       ## ----------------------------
       ## Display the shortcuts
       ## ----------------------------
-      #if($displayShortcuts)
+      #if($canView && $displayShortcuts)
         #submenuseparator()
         #template("shortcuts.vm")
       #end
@@ -119,7 +127,7 @@
   <script type="text/javascript">
   //<![CDATA[
     #if ($hasEdit && !$isReadOnly)
-      shortcut.add("$services.localization.render('core.shortcuts.view.edit')",function() { location.href=$('tmEdit').href; }, { 'type':'keypress', 'propagate':false, 'disable_in_input':true });
+      shortcut.add("$services.localization.render('core.shortcuts.view.edit')",function() { location.href=$('tmEdit').down('a').href; }, { 'type':'keypress', 'propagate':false, 'disable_in_input':true });
       #if($isAdvancedUser)
         shortcut.add("$services.localization.render('core.shortcuts.view.wiki')",function() { location.href=$('tmEditWiki').href; }, { 'type':'keypress', 'propagate':false, 'disable_in_input':true });
         shortcut.add("$services.localization.render('core.shortcuts.view.wysiwyg')",function() { location.href=$('tmEditWysiwyg').href; }, { 'type':'keypress', 'propagate':false, 'disable_in_input':true });
