--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/drawer.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/drawer.vm
@@ -66,7 +66,7 @@
       #end
       ## WIKI INDEX
       #drawerSeparator()
-      #drawerItem($xwiki.getURL($WikiManagerMainDocReference), 'list', 'Wiki Index')
+      #drawerItem($xwiki.getURL($WikiManagerMainDocReference), 'list', $services.localization.render('platform.wiki.menu.wikiindex'))
       ## DOCUMENT INDEX
       #set($homeDocumentIndexRef = $services.model.createDocumentReference($mainWikiId, 'Main', 'AllDocs'))
       #if ($xwiki.exists($homeDocumentIndexRef))
