XWIKI-12268: Adapt the "delete" action for nested documents. XWIKI-12421: Relook copy, rename, delete actions to have all menus.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/panels.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/panels.less
@@ -38,3 +38,16 @@ h1.xwikipaneltitle {
     margin-bottom: 0;
   }
 }
+
+// Panels inside the page =================================================
+.main {
+  .panel-body {
+    background-color: @xwiki-page-content-bg;
+  }
+}
+
+// Panels with a collapse body (ex: delete page) ==========================
+a.panel-collapse-carret {
+  color: @text-color;
+  padding: @panel-heading-padding;
+}
