--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/contentview.vm
@@ -39,26 +39,7 @@ $services.progress.endStep()
 ## ----------------------------
 $services.progress.startStep('Display the title')
 <div class="xcontent">
-  <div class="row document-header">
-    <div class="document-info col-xs-12 #if($displayContentMenu)col-md-7#end">
-      ## --------------------------------------------------------
-      ## Display UI Extensions before the title element
-      ## --------------------------------------------------------
-      #foreach ($uix in $services.uix.getExtensions('org.xwiki.platform.template.title.before'))
-        $services.rendering.render($uix.execute(), 'xhtml/1.0')
-      #end
-      <div id="document-title"><h1>$titleToDisplay</h1></div>
-      <div class="xdocLastModification">
-        $services.localization.render('core.footer.modification', [$xwiki.getUserName($tdoc.author), $xwiki.formatDate($tdoc.date)])
-      </div>
-    </div>
-    #if($displayContentMenu)
-      <div class="document-menu col-xs-12 col-md-5">
-        #template("menus_content.vm")
-      </div>
-    #end
-  </div>
-  <hr/>
+  #template('contentheader.vm')
   ## --------------------------------------------------------------------------
   ## Drop permissions as they are no longer needed. This allows us not to have
   ## to review the code below for security holes since nothing bad can happen.
