--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/delete.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/delete.vm
@@ -1,78 +1,201 @@
+#######################################################
+###              DELETE PAGE ACTION
+###              ------------------
 ###
-### Delete page confirm message
-###
-###
+#######################################################
+##                     HEADER
+#######################################################
 #template("startpage.vm")
 <div class="main">
 <div id="mainContentArea">
-#if($message)
-  <div id="xwikimessage">$message</div>
-#end
-#if("$!{request.id}" == '')
-#set($links = $doc.getBacklinks())
-#set($childrenStatement = 'where doc.fullName <> :parentFullName and (doc.parent = :parentFullName or (doc.parent = :parentName and doc.space = :parentSpace))')
-#set($childrenQuery = $services.query.xwql($childrenStatement))
-#set($discard = $childrenQuery.bindValue('parentFullName', $doc.fullName).bindValue('parentName', $doc.name).bindValue('parentSpace', $doc.space))
-#set($children = $childrenQuery.addFilter('unique').execute())
+  #set($quote = '"')
+  #set($titleToDisplay = $services.localization.render('core.delete.title', ["<a href=${quote}$doc.getURL('view')${quote}>$doc.plainTitle</a>"]))
+  <div class="xcontent">
+  #template('contentheader.vm')
+#######################################################
+##                     GLOBALS
+#######################################################
+#set($fullmsg = '')
 #set($quote = '"')
 #set($hasInlinks = false)
-#set($fullmsg = '')
-#if($links && $links.size() > 0)
-  #set($tmpmsg = '</p><ul>')
-  #foreach($docname in $links)
-    #set($rdoc = $xwiki.getDocument($docname).getTranslatedDocument())
-    #set($tmpmsg = "${tmpmsg}<li><a href=${quote}${rdoc.getURL('view')}${quote}>$escapetool.xml(${rdoc.getPlainTitle()})</a></li>")
-  #end
-  #set($tmpmsg = "${tmpmsg}</ul><p class='xwikimessage'>")
-  #set($tmpmsg = $services.localization.render('core.delete.backlinksWarning', [$tmpmsg]))
-  #set($fullmsg = "${fullmsg}${tmpmsg}</p><p class='xwikimessage'>")
-  #set($hasInlinks = true)
-#end
-#if($children && $children.size() > 0)
-  #set($tmpmsg = '</p><ul>')
-  #foreach($docname in $children)
-    #set($rdoc = $xwiki.getDocument($docname).getTranslatedDocument())
-    #set($tmpmsg = "${tmpmsg}<li><a href=${quote}${rdoc.getURL('view')}${quote}>$escapetool.xml(${rdoc.getPlainTitle()})</a></li>")
-  #end
-  #set($tmpmsg = "${tmpmsg}</ul><p class='xwikimessage'>")
-  #set($tmpmsg = $services.localization.render('core.delete.orphansWarning', [$tmpmsg]))
-  #set($fullmsg = "${fullmsg}${tmpmsg}</p><p class='xwikimessage'>")
-  #set($hasInlinks = true)
-#end
-#if($xwiki.hasRecycleBin())
-  #if($hasInlinks)
-    #set($fullmsg = "${fullmsg}${services.localization.render('core.recyclebin.confirmWithInlinks')}")
-  #else
-    #set($fullmsg = $services.localization.render('core.recyclebin.confirm'))
+#######################################################
+##                    CONTROLLER
+#######################################################
+#if("$!{request.jobId}" == '')
+  #if("$!{request.id}" == '')
+    #displayConfirmationPage()
+  #else ## request.id means that we are deleting a document from the recycle bin
+    #displayCompletelyDeleteConfirmMessage()
   #end
 #else
-  #if($hasInlinks)
-    #set($fullmsg = "${fullmsg}${services.localization.render('core.delete.confirmWithInlinks')}")
-  #else
-    #set($fullmsg = $services.localization.render('core.delete.confirm'))
+  #displayProgressBar()
+#end
+#######################################################
+##            DISPLAY CONFIRMATION PAGE
+#######################################################
+#macro(displayConfirmationPage)
+  <form action="$doc.getURL('delete', "$!{languageparams}")" method="post">
+  #getChildren()
+  #getBacklinks()
+  #getChildren_legacy()
+  #displayConfirmMessage()
+  </form>
+#end
+#######################################################
+##              DISPLAY PROGRESS BAR
+#######################################################
+#macro(displayProgressBar)
+  #set($discard = $xwiki.jsfx.use('delete.js', true))
+  #set($discard = $xwiki.ssfx.use('uicomponents/extension/extension.css', true))
+  #set($jobId = $request.jobId)
+  <div class="ui-progress" id="delete-progress-bar-container">
+    <p>$services.localization.render('core.delete.waitmessage')</p>
+    <div class="ui-progress-background">
+      <div class="ui-progress-bar green" id="delete-progress-bar" data-job-id="$jobId" data-progress="0"></div>
+    </div>
+  </div>
+  <p class="successmessage hidden" id="successMessage">$services.localization.render('core.delete.success')</p>
+#end
+#######################################################
+##                  DISPLAY PANEL
+#######################################################
+#macro(displayPanel $panelId $panelClass $heading $body)
+  <div class="panel $!panelClass">
+    <div class="panel-heading">
+      $heading
+      <div class="pull-right"><a class="panel-collapse-carret" role="button" data-toggle="collapse" href="#$panelId" aria-expanded="false" aria-controls="$panelId"><span class="caret"></span></a></div>
+    </div>
+    <div class="panel-body collapse" id="$panelId">
+      $body
+    </div>
+  </div>
+#end
+#######################################################
+##                    CHILDREN
+#######################################################
+#macro(getChildren)
+  #set($childCountXWQL = "WHERE doc.fullName LIKE :space AND doc.fullName <> :fullName")
+  #set($childCount = $services.query.xwql($childCountXWQL).bindValue('space', "${doc.space}.%").bindValue('fullName', $doc.fullName).addFilter('unique').count())
+  #if ($childCount > 0)
+    #define($heading)
+      <input name="affectChildren" id="affectChildren" type="checkbox" /><label for="affectChildren">Affect children</label> ($childCount)
+    #end
+    #define($body)
+      ##
+      ## List the documents to be deleted using a livetable
+      ##
+      #set ($collist = ['doc.title','doc.date', 'doc.author'])
+      #set ($colprops = {
+        'doc.title' : { 'link' : 'view' },
+        'doc.author' : { 'link' : 'author' }
+      })
+      #set ($urlParameters = "xpage=getdocuments&childrenOf=$escapetool.url($doc.space)&queryFilters=unique")
+      #set ($options = { 
+        'url' : "$doc.getURL('get', $urlParameters)",
+        'translationPrefix' : 'platform.index.',
+        'outputOnlyHtml' : true
+      })
+      #livetable('deleteSpaceIndex' $collist $colprops $options)
+    #end
+    #displayPanel('panel-children', 'panel-default', $heading, $body)
   #end
 #end
-  #xwikimessageboxstart($services.localization.render('core.delete') $fullmsg)
-    <form action="$doc.getURL('delete', "$!{languageparams}")" method="post">
-      <div class="hidden">
-        <input type="hidden" name="form_token" value="$!{services.csrf.getToken()}" />
-        <input type="hidden" name="confirm" value="1"/>
-        #if("$!{request.xredirect}" != '')
-          <input type="hidden" name="xredirect" value="$!{escapetool.xml($request.xredirect)}"/>
+#######################################################
+##                 LEGACY CHILDREN
+##
+## Get the children document based on the legacy
+## parent/child relationship.
+#######################################################
+#macro(getChildren_legacy)
+  #if($services.parentchild.isParentChildMechanismEnabled())
+    #set($childrenStatement = 'where doc.fullName <> :parentFullName and (doc.parent = :parentFullName or (doc.parent = :parentName and doc.space = :parentSpace))')
+    #set($childrenQuery = $services.query.xwql($childrenStatement))
+    #set($discard = $childrenQuery.bindValue('parentFullName', $doc.fullName).bindValue('parentName', $doc.name).bindValue('parentSpace', $doc.space))
+    #set($children = $childrenQuery.addFilter('unique').execute())
+    #if($children && $children.size() > 0)
+      #define($heading)
+        <strong>Orphans</strong> ($children.size())
+      #end
+      #define($body)
+        #set($tmpmsg = '<ul>')
+        #foreach($docname in $children)
+          #set($rdoc = $xwiki.getDocument($docname).getTranslatedDocument())
+          #set($tmpmsg = "${tmpmsg}<li><a href=${quote}${rdoc.getURL('view')}${quote}>$escapetool.xml(${rdoc.getPlainTitle()})</a></li>")
         #end
-      </div>
-      <div class="buttonwrapper"> 
-        <input type="submit" class="button" value="$services.localization.render('yes')"/>
-        #if("$!{request.xredirect}" != '')
-          #set($cancelUrl = "$request.xredirect")
-        #else
-          #set($cancelUrl = $doc.getURL())
+        #set($tmpmsg = "${tmpmsg}</ul>")
+        $services.localization.render('core.delete.orphansWarning', [$tmpmsg])
+      #end
+      #displayPanel('panel-legacy-children', 'panel-default', $heading, $body)
+    #end
+  #end
+#end
+#######################################################
+##                 GET BACKLINKS
+##
+## Get the documents having some links to the current 
+## one.
+#######################################################
+#macro(getBacklinks)
+  #set($links = $doc.getBacklinks())
+  #if($links && $links.size() > 0)
+    #define($heading)
+     <strong>Backlinks</strong> ($links.size())
+    #end
+    #define($body)
+      #define($tmpmsg)
+        <ul>
+        #foreach($docname in $links)
+          #set($rdoc = $xwiki.getDocument($docname).getTranslatedDocument())
+          <li><a href="${rdoc.getURL('view')}">$escapetool.xml(${rdoc.getPlainTitle()})</a></li>
         #end
-        <a class="secondary button" href="$!{escapetool.xml(${cancelUrl})}">$services.localization.render('no')</a>
-      </div>
-    </form>
-  #xwikimessageboxend()
-#else ## request.id
+        </ul>
+      #end
+      $services.localization.render('core.delete.backlinksWarning', [$tmpmsg])
+    #end
+    #displayPanel('panel-backlinks', 'panel-default', $heading, $body)
+    #set($hasInlinks = true)
+  #end
+#end
+#######################################################
+##              DISPLAY CONFIRM MESSAGE
+#######################################################
+#macro(displayConfirmMessage)
+  #if($xwiki.hasRecycleBin())
+    #if($hasInlinks)
+      #set($fullmsg = "${fullmsg}<strong>${services.localization.render('core.recyclebin.confirmWithInlinks')}</strong>")
+    #else
+      #set($fullmsg = $services.localization.render('core.recyclebin.confirm'))
+    #end
+  #else
+    #if($hasInlinks)
+      #set($fullmsg = "${fullmsg}<strong>${services.localization.render('core.delete.confirmWithInlinks')}</strong>")
+    #else
+      #set($fullmsg = $services.localization.render('core.delete.confirm'))
+    #end
+  #end
+  <p>$fullmsg</p>
+  <div class="hidden">
+    <input type="hidden" name="form_token" value="$!{services.csrf.getToken()}" />
+    <input type="hidden" name="confirm" value="1"/>
+    #if("$!{request.xredirect}" != '')
+      <input type="hidden" name="xredirect" value="$!{escapetool.xml($request.xredirect)}"/>
+    #end
+  </div>
+  <button class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span> $services.localization.render('yes'), please delete this page</button>
+  #if("$!{request.xredirect}" != '')
+    #set($cancelUrl = "$request.xredirect")
+  #else
+    #set($cancelUrl = $doc.getURL())
+  #end
+  <a class="btn btn-primary" href="$!{escapetool.xml(${cancelUrl})}">$services.localization.render('no'), take me back!</a>
+#end
+#######################################################
+##              DISPLAY CONFIRM MESSAGE
+##
+## Display a confirmation message when the user wants 
+## to delete a page from the recycle bin.
+#######################################################
+#macro(displayCompletelyDeleteConfirmMessage)
   #xwikimessageboxstart($services.localization.render('core.delete') $services.localization.render('core.recyclebin.completelyDeleteConfirm'))
     <form action="$xwiki.relativeRequestURL" method="post">
       <div class="hidden">
@@ -94,7 +217,11 @@
     </form>
   #xwikimessageboxend()
 #end
+#######################################################
+##                     FOOTER
+#######################################################
 <div class="clearfloats"></div>
+</div>
 </div>## mainContentArea
 </div>## main
 #template("endpage.vm")
