XWIKI-12268: Adapt the "delete" action for nested documents.
* Fix bad REST URL
* Use delete.min.js when minify is on.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/delete.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/delete.vm
@@ -45,7 +45,7 @@
 ##              DISPLAY PROGRESS BAR
 #######################################################
 #macro(displayProgressBar)
-  #set($discard = $xwiki.jsfx.use('delete.js', true))
+  #set($discard = $xwiki.jsfx.use("delete${jsExtension}", true))
   #set($discard = $xwiki.ssfx.use('uicomponents/extension/extension.css', true))
   #set($jobId = $request.jobId)
   <div class="ui-progress" id="delete-progress-bar-container">
