XWIKI-12268: Adapt the "delete" action for nested documents.
* Add a message when some errors happened during the process.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/delete.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/delete.vm
@@ -55,6 +55,7 @@
     </div>
   </div>
   <p class="successmessage hidden" id="successMessage">$services.localization.render('core.delete.success')</p>
+  <p class="errormessage hidden" id="errorMessage">$services.localization.render('core.delete.error')</p>
 #end
 #######################################################
 ##                  DISPLAY PANEL
